k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ps-products-deployment
spec:
  selector:
    matchLabels:
      app: ps-products-pod
  template:
    metadata:
      labels:
        app: ps-products-pod
    spec:
      containers:
        - name: ps-products-container
          image: psacrpoc.azurecr.io/psaksimg
          imagePullPolicy: "Always"
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ps-products-service
spec:
  selector:
    app: ps-products-pod
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 80
