k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ps-products-service
spec:
  type: LoadBalancer
  selector:
    app: ps-products-pod
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 80
